/**
 * Generated by orval v8.20.0 🍺
 * Do not edit manually.
 * GenAI Service API
 * OpenAPI spec version: 1.0.0
 */
import type { ChatMessageRole } from './chatMessageRole.ts';

export interface ChatMessage {
  id?: number;
  role?: ChatMessageRole;
  content?: string;
  timestamp?: number;
}
