/**
 * Generated by orval v8.20.0 🍺
 * Do not edit manually.
 * GenAI Service API
 * OpenAPI spec version: 1.0.0
 */

export type ChatMessageRole = typeof ChatMessageRole[keyof typeof ChatMessageRole];


export const ChatMessageRole = {
  USER: 'USER',
  AGENT: 'AGENT',
} as const;
