@startuml
!pragma layout smetana
' All class definitions required by our architecture

title Analysis Object Model (Domain Entities)
class User {
	- id: Long
	- username: String
	- passwordHash: String
}

class Note {
	- id: Long
	- userId: Long
	- title: String
	- content: String
	- createdAt: OffsetDateTime
	- lastUpdatedAt: OffsetDateTime
}

class CalendarEvent {
	- id: Long
	- userId: Long
	- title: String
	- description: String
	- startTime: OffsetDateTime
	- endTime: OffsetDateTime
	- location: String
}

class Checklist {
	- id: Long
	- userId: Long
	- title: String
	- createdAt: OffsetDateTime
}

class ChecklistItem {
	- id: Long
	- text: String
	- completed: boolean
	- position: Integer
}

class ChatConversation {
	- id: BigInteger
	- user_id: BigInteger
	- title: String
	- created_at: DateTime
}

class ChatMessage {
	- id: BigInteger
	- content: Text
	- timestamp: BigInteger
}

enum ChatMessageRole {
	USER
	AGENT
}

note as GlobalInfo
  **General information:**
  * every field is private by default, and is exposed via getters
     and setters only
  * getters and setters are not declared by default, but should
     be included via Lombok using @Getter and @Setter
end note

' Connections between classes
User "1" --> "*" Note
User "1" --> "*" CalendarEvent
User "1" --> "*" Checklist
Checklist "1" --> "*" ChecklistItem
User "1" --> "*" ChatConversation
ChatConversation "1" --> "*" ChatMessage
ChatMessage --> ChatMessageRole
@enduml